fix: Fix 'Other News' gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ h3 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 65px;
-  grid-gap: 20px;
+  grid-gap: 0px 22px;
   grid-template-areas:
     'tl tl tl'
     'one two tr';
